Update cms config to point to github repo

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: test-repo
+  name: github
+  repo: grodier/netlify-cms-playground
 
 media_folder: static/assets
 public_folder: assets
