Use git gateway and add admin role

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
-  name: github
-  repo: grodier/netlify-cms-playground
+  name: git-gateway
+  accept_roles:
+    - admin
 
 media_folder: static/assets
 public_folder: assets
